# hyyve

./: .env.docker  .env.example  .env.test.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  commitlint.config.js  docker-compose.override.yml  docker-compose.yml  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  tsconfig.json  turbo.json  vitest.config.ts
.github/workflows/: ci.yml  e2e-tests.yml
.serena/: project.yml
.serena/memories/: hyyve-development-artifacts.md  parallel-development-plan.md  project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-1-user-registration-email-password.md  1-1-10-mfa-sms-verification.md  1-1-11-mfa-login-verification.md  1-1-12-enterprise-sso-saml-configuration.md  1-1-13-enterprise-sso-oidc-configuration.md  1-1-14-scim-user-provisioning.md  1-1-2-user-registration-social-providers.md  1-1-3-organization-onboarding-setup.md  1-1-4-user-login-with-email-password.md  1-1-5-password-reset-flow.md  1-1-6-user-login-social-providers.md  1-1-7-mfa-setup-method-selection.md  1-1-8-mfa-setup-totp-authenticator.md  1-1-9-mfa-backup-codes-generation.md  1-2-1-api-key-creation-with-scopes.md  1-2-10-api-key-expiration-management.md  1-2-2-api-key-environment-configuration.md  1-2-3-api-key-rate-limiting.md  1-2-4-enterprise-ip-allowlisting.md  1-2-5-cors-origin-restrictions.md  1-2-6-api-key-listing-management.md  1-2-7-api-key-rotation.md  (+30 more)
apps/agent-service/: Dockerfile  pyproject.toml
apps/agent-service/src/: __init__.py  config.py  main.py
apps/agent-service/src/agents/: __init__.py  base.py  definitions.py
apps/agent-service/src/llm/: __init__.py  claude.py
apps/agent-service/src/memory/: __init__.py
apps/agent-service/src/routers/: __init__.py  agents.py  health.py
apps/agent-service/src/tools/: __init__.py
apps/agent-service/src/workflows/: __init__.py
scripts/: docker-up.sh
supabase/: config.toml
tests/: .gitignore  tsconfig.json
(+612 files in other folders)
